// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LibraryPage visual regression > matches the library snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-1o116p1-MuiContainer-root"
    >
      <section
        aria-label="Library"
        class="MuiBox-root css-1821gv5"
        data-testid="library-page"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-1bazrdc-MuiTypography-root"
        >
          Library
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1qcw4ol-MuiTypography-root"
        >
          Scan your music library to index albums and refresh metadata.
        </p>
        <button
          data-testid="scan-button-stub"
          type="button"
        >
          Scan library
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`LibraryPage visual regression > matches the library snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-1o116p1-MuiContainer-root"
    >
      <section
        aria-label="Library"
        class="MuiBox-root css-1821gv5"
        data-testid="library-page"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-1bazrdc-MuiTypography-root"
        >
          Library
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1qcw4ol-MuiTypography-root"
        >
          Scan your music library to index albums and refresh metadata.
        </p>
        <button
          data-testid="scan-button-stub"
          type="button"
        >
          Scan library
        </button>
      </section>
    </div>
  </div>
</div>
`;
